# zkmarek-pairings

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/zkmarek/: ec_affine.py  ec_projective.py  field.py
tests/: const.py  test_ec_affine.py  test_ec_projective.py  test_field.py
